--- a/.env.local
+++ b/.env.local
@@ -43,7 +43,10 @@ POOLER_TENANT_ID=your-tenant-id
 # Keep the "/" as a separator between the two.
 ############
 
-NEO4J_AUTH=neo4j/password
+NEO4J_PORT=7687
+NEO4J_USER=neo4j
+NEO4j_PASSWORD=password
+NEO4J_AUTH=${NEO4J_USER}/${NEO4J_PASSWORD}
 
 ############
 # [required] 
