--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,16 @@ services:
         - ./neo4j/config:/config
         - ./neo4j/data:/data
         - ./neo4j/plugins:/plugins
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "wget -qO- http://localhost:${NEO4J_PORT:-7474} || exit 1",
+        ]
+      interval: 1s
+      timeout: 10s
+      retries: 10
+      start_period: 3s
     expose:
       - 7473/tcp
       - 7474/tcp
