--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ volumes:
   open-webui:
   valkey-data:
   langfuse_postgres_data:
+  neo4j_data:
+  neo4j_logs:
 
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
@@ -88,67 +90,14 @@ services:
         condition: service_completed_successfully
 
   graphiti:
-    profiles: [""]
-    build:
-      context: ./graphiti
-    ports:
-      - "8000:8000"
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "python",
-          "-c",
-          "import urllib.request; urllib.request.urlopen('http://localhost:8000/healthcheck')",
-        ]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-    depends_on:
-      neo4j:
-        condition: service_healthy
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - NEO4J_URI=bolt://neo4j:${NEO4J_PORT:-7687}
-      - NEO4J_USER=${NEO4J_USER}
-      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
-      - PORT=8000
-      - db_backend=neo4j
+    extends:
+      file: ./graphiti/mcp_server/docker-compose.yml
+      service: graphiti-mcp-neo4j
 
   neo4j:
-    image: neo4j:latest
-    volumes:
-        - ./neo4j/logs:/logs
-        - ./neo4j/config:/config
-        - ./neo4j/data:/data
-        - ./neo4j/plugins:/plugins
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "wget -qO- http://localhost:${NEO4J_PORT:-7474} || exit 1",
-        ]
-      interval: 1s
-      timeout: 10s
-      retries: 10
-      start_period: 3s
-    expose:
-      - 7473/tcp
-      - 7474/tcp
-      - 7687/tcp
-    environment:
-        - NEO4J_AUTH=${NEO4J_AUTH:-"neo4j/your_password"}
-    restart: always      
-
-    cap_drop:
-      - ALL
-    cap_add:
-      - NET_BIND_SERVICE
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "1m"
-        max-file: "1"
+    extends:
+      file: ./graphiti/mcp_server/docker-compose.yml
+      service: neo4j
 
   postgres:
     image: postgres:${POSTGRES_VERSION:-17.6}
