--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "langchain>=1.1.0",
     "langchain-openai>=1.1.0",
+    "python-dotenv>=1.2.1",
     "ruff>=0.14.6",
 ]
