--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain-mcp-adapters>=0.1.14",
     "langchain-openai>=1.1.0",
     "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
     "python-dotenv>=1.2.1",
     "ruff>=0.14.6",
 ]
