--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python-envs.pythonProjects": [],
-    "python.defaultInterpreterPath": "${workspaceFolder}/memory_agents/.venv/bin/python"
+    "python.defaultInterpreterPath": "${workspaceFolder}/memory_agents/.venv/bin/python",
+    "python-envs.defaultEnvManager": "ms-python.python:system"
 }
