--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -5,11 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "backoff>=2.2.1",
     "langchain>=1.1.0",
     "langchain-mcp-adapters>=0.1.14",
     "langchain-openai>=1.1.0",
+    "nltk>=3.9.2",
+    "numpy>=2.3.5",
+    "openai>=2.8.1",
+    "packaging>=25.0",
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
     "python-dotenv>=1.2.1",
     "ruff>=0.14.6",
+    "tqdm>=4.67.1",
 ]
