--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ NEO4J_PASSWORD=demodemo
 
 # OpenAI API Configuration
 # Required for LLM operations
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=""
 MODEL_NAME=gpt-4.1-mini
 
 # Optional: Only needed for non-standard OpenAI endpoints
