--- a/memory_agents/.env.example
+++ b/memory_agents/.env.example
@@ -1,1 +1,6 @@
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Langfuse configuration
+LANGFUSE_SECRET_KEY=your_langfuse_secret_key_here
+LANGFUSE_PUBLIC_KEY=your_langfuse_public_key_here
+LANGFUSE_BASE_URL="http://localhost:3002"
