--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
+include:
+  - ./graphiti/mcp_server/docker/docker-compose.yml
+
 volumes:
   open-webui:
-  volumes:
-  falkordb_data:
-    driver: local
-  mcp_logs:
-    driver: local
 
 services:
   open-webui:
@@ -17,8 +15,3 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - open-webui:/app/backend/data
-
-  graphiti:
-    extends:
-      file: ./graphiti/mcp_server/docker/docker-compose.yml
-      service: graphiti-falkordb
