--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,29 @@ services:
     volumes:
       - open-webui:/app/backend/data
 
-  graphiti:
-    extends:
-      file: ./graphiti/mcp_server/docker/docker-compose.yml
-      service: graphiti-falkordb
-    env_file:
-      - path: ./.env
-        required: false
+  graphiti-falkordb:
+    image: zepai/knowledge-graph-mcp:latest
+    environment:
+      # FalkorDB configuration
+      - FALKORDB_PASSWORD=${FALKORDB_PASSWORD:-}
+      - BROWSER=${BROWSER:-1}  # Enable FalkorDB Browser UI (set to 0 to disable)
+      # MCP Server configuration
+      - FALKORDB_URI=redis://localhost:6379
+      - FALKORDB_DATABASE=${FALKORDB_DATABASE:-default_db}
+      - GRAPHITI_GROUP_ID=${GRAPHITI_GROUP_ID:-main}
+      - SEMAPHORE_LIMIT=${SEMAPHORE_LIMIT:-10}
+      - CONFIG_PATH=/app/mcp/config/config.yaml
+      - PATH=/root/.local/bin:${PATH}
+    volumes:
+      - falkordb_data:/var/lib/falkordb/data
+      - mcp_logs:/var/log/graphiti
+    ports:
+      - "6379:6379"  # FalkorDB/Redis
+      - "3000:3000"  # FalkorDB web UI
+      - "8000:8000"  # MCP server HTTP
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "6379", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
