--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
     "python-dotenv>=1.2.1",
+    "requests>=2.31.0",
     "ruff>=0.14.6",
     "tqdm>=4.67.1",
 ]
