--- a/.github/workflows/evaluate_graphiti.yml
+++ b/.github/workflows/evaluate_graphiti.yml
@@ -1,4 +1,38 @@
+name: Evaluate Baseline+Graphiti
+
 on:
   push:
     branches:
       - evaluate_graphiti
+
+env:
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  NEO4J_URI: bolt://neo4j:7687
+  NEO4J_USER: neo4j
+  NEO4J_PASSWORD: demodemo
+  MODEL_NAME: gpt-4.1-mini
+
+defaults:
+  run:
+    shell: bash
+
+jobs:
+  uv-sync:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: Install Dependencies
+        run: uv sync --all-groups
+        working-directory: memory_agents
+
+      - name: Evaluate Baseline+Graphiti
+        run: uv run answer_generation_and_evaluation.py --agent graphiti
+        working-directory: memory_agents/longmemeval
+
+        
