--- a/.github/workflows/evaluate_baseline.yml
+++ b/.github/workflows/evaluate_baseline.yml
@@ -10,7 +10,7 @@ env:
   NEO4J_URI: bolt://neo4j:7687
   NEO4J_USER: neo4j
   NEO4J_PASSWORD: demodemo
-  MODEL_NAME: gpt-4.1-mini
+  MODEL_NAME: gpt-4o-mini
 
 defaults:
   run:
@@ -18,7 +18,7 @@ defaults:
 
 jobs:
   uv-sync:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
