--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "graphiti"]
 	path = graphiti
-	url = git@github.com:legendofa/graphiti.git
+	url = git@github.com:memory-agents/graphiti.git
