--- a/.github/workflows/evaluate_baseline.yml
+++ b/.github/workflows/evaluate_baseline.yml
@@ -1,5 +1,8 @@
 name: Evaluate Baseline
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
@@ -23,6 +26,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
