--- a/.github/workflows/evaluate_baseline.yml
+++ b/.github/workflows/evaluate_baseline.yml
@@ -20,13 +20,13 @@ defaults:
     shell: bash
 
 jobs:
-  uv-sync:
+  evaluate-baseline:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
 
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
