--- a/.github/workflows/evaluate_graphiti.yml
+++ b/.github/workflows/evaluate_graphiti.yml
@@ -1,5 +1,8 @@
 name: Evaluate Baseline+Graphiti
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
@@ -17,12 +20,13 @@ defaults:
     shell: bash
 
 jobs:
-  uv-sync:
+  evaluate-graphiti:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
+          token: ${{ secrets.PAT }}
 
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
