--- a/.github/workflows/evaluate_graphiti_vdb.yml
+++ b/.github/workflows/evaluate_graphiti_vdb.yml
@@ -17,7 +17,7 @@ env:
   POSTGRES_PASSWORD: testpostgrespass
   CLICKHOUSE_PASSWORD: super-secret-key-1
   MINIO_ROOT_PASSWORD: super-secret-key-2
-  LANGFUSE_SECRET: super-secret-key-3
+  LANGFUSE_SALT: super-secret-key-3
   NEXTAUTH_SECRET: super-secret-key-4
   ENCRYPTION_KEY: 0c563cdb3d05e5e995b4c06951369e8f1732019ce59b2710848140e3f7f4368d
 
