--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -21,4 +21,6 @@ dependencies = [
     "ruff>=0.14.6",
     "tqdm>=4.67.1",
     "langfuse>=3.10.1",
+    "flashrank>=0.2.10",
+    "langchain-community>=0.4.1",
 ]
