Revert "Install docker-compose"
This reverts commit c61983277913ec2707b7ec23f892c4133dee3429.

--- a/.github/workflows/evaluate_graphiti_vdb.yml
+++ b/.github/workflows/evaluate_graphiti_vdb.yml
@@ -49,7 +49,7 @@ jobs:
         working-directory: .
 
       - name: Install Docker
-        run: brew install docker-compose
+        run: brew install docker
         working-directory: .
 
       - name: Run Docker
