Revert "Try MacOS"
This reverts commit 962f90aa34d9d0e50938786121b521f9038a2a86.

--- a/.github/workflows/evaluate_graphiti_vdb.yml
+++ b/.github/workflows/evaluate_graphiti_vdb.yml
@@ -26,7 +26,7 @@ defaults:
 
 jobs:
   evaluate-graphiti-vdb:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
