--- a/.github/workflows/evaluate_graphiti_vdb.yml
+++ b/.github/workflows/evaluate_graphiti_vdb.yml
@@ -52,8 +52,9 @@ jobs:
         run: docker compose -f docker-compose-workflow.yml up -d
         working-directory: .
 
-      - name: Wait for Docker to start
-        run: sleep 10
+      - name: Wait for services to start
+        run: docker compose -f docker-compose-workflow.yml wait
+        timeout-minutes: 10
 
       - name: Evaluate Baseline+Graphiti+VDB
         run: uv run answer_generation_and_evaluation.py --agent graphiti_vdb
