--- a/.github/workflows/evaluate_graphiti_vdb.yml
+++ b/.github/workflows/evaluate_graphiti_vdb.yml
@@ -19,6 +19,7 @@ env:
   MINIO_ROOT_PASSWORD: super-secret-key-2
   LANGFUSE_SALT: super-secret-key-3
   NEXTAUTH_SECRET: super-secret-key-4
+  SEMAPHORE_LIMIT: 10
 
 defaults:
   run:
