--- a/docker-compose-workflow.yml
+++ b/docker-compose-workflow.yml
@@ -10,3 +10,9 @@ services:
     extends:
       file: ./graphiti/mcp_server/docker/docker-compose.yml
       service: graphiti-falkordb
+    environment:
+      - OPENAI_API_KEY
+      - NEO4J_URI
+      - NEO4J_USER
+      - NEO4J_PASSWORD
+      - SEMAPHORE_LIMIT
