--- a/.github/workflows/evaluate_graphiti_vdb.yml
+++ b/.github/workflows/evaluate_graphiti_vdb.yml
@@ -55,7 +55,8 @@ jobs:
 
       - name: Wait for services to start
         run: |
-          until [ "$(docker inspect -f '{{.State.Health.Status}}' graphiti)" = "healthy" ]; do
+          name=$(docker compose ps graphiti --format '{{.Name}}')
+          until [ "$(docker inspect -f '{{.State.Health.Status}}' $name)" = "healthy" ]; do
             sleep 1
           done
 
