--- a/.github/workflows/evaluate_graphiti.yml
+++ b/.github/workflows/evaluate_graphiti.yml
@@ -14,6 +14,11 @@ env:
   NEO4J_USER: neo4j
   NEO4J_PASSWORD: demodemo
   MODEL_NAME: gpt-4o-mini
+  POSTGRES_PASSWORD: testpostgrespass
+  CLICKHOUSE_PASSWORD: super-secret-key-1
+  MINIO_ROOT_PASSWORD: super-secret-key-2
+  LANGFUSE_SALT: super-secret-key-3
+  NEXTAUTH_SECRET: super-secret-key-4
   SEMAPHORE_LIMIT: 10
 
 defaults:
@@ -35,6 +40,25 @@ jobs:
       - name: Install Dependencies
         run: uv sync --all-groups
         working-directory: memory_agents
+
+      - name: Generate Encryption Key
+        run: openssl rand -hex 32 > encryption_key.txt
+        working-directory: .
+
+      - name: Set Encryption Key
+        run: export ENCRYPTION_KEY=$(cat encryption_key.txt)
+        working-directory: .
+
+      - name: Run Docker
+        run: docker compose -f docker-compose-workflow.yml up -d
+        working-directory: .
+
+      - name: Wait for services to start
+        run: |
+          name=$(docker compose ps graphiti --format '{{.Name}}')
+          until [ "$(docker inspect -f '{{.State.Health.Status}}' $name)" = "healthy" ]; do
+            sleep 1
+          done
 
       - name: Evaluate Baseline+Graphiti
         run: uv run answer_generation_and_evaluation.py --agent graphiti
