--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -25,4 +25,5 @@ dependencies = [
     "langchain-community>=0.4.1",
     "mypy>=1.19.0",
     "types-requests>=2.32.4.20250913",
+    "pre-commit>=4.5.0",
 ]
