--- a/memory_agents/.pre-commit-config.yaml
+++ b/memory_agents/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
   - repo: local
     hooks:
-      - id: ruff-mypy
-        name: Ruff + MyPy
-        entry: bash ../.git-hooks/pre-commit
+      - id: ruff-ty
+        name: Ruff + Ty
+        entry: bash .git-hooks/pre-commit
         language: system
         files: \.py$
