--- a/memory_agents/pyproject.toml
+++ b/memory_agents/pyproject.toml
@@ -23,7 +23,11 @@ dependencies = [
     "langfuse>=3.10.1",
     "flashrank>=0.2.10",
     "langchain-community>=0.4.1",
-    "mypy>=1.19.0",
     "types-requests>=2.32.4.20250913",
     "pre-commit>=4.5.0",
+    "ty>=0.0.1a33",
 ]
+
+[tool.ty.src]
+include = ["*"]
+exclude = ["longmemeval/src"]
