--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Generate docs
       run: |
-        pdoc --html memory_agents --output-dir docs --force
+        pdoc --html memory_agents --output-dir docs
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
