Adapted docs workflow to include uv deps

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,25 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          token: ${{ secrets.PAT }}
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pdoc
+      - name: Install Dependencies
+        run: uv sync --all-groups
+        working-directory: memory_agents
 
-    - name: Generate docs
-      run: |
-        pdoc -o docs memory_agents
+      - name: Generate docs
+        run: |
+          uv run pdoc -o docs memory_agents
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
