Add correct working directory for workflow steps

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,9 +25,11 @@ jobs:
       - name: Generate docs
         run: |
           uv run pdoc -o docs memory_agents
+        working-directory: memory_agents
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
+        working-directory: memory_agents
