--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,3 +33,4 @@ jobs:
         with:
           github_token: ${{ secrets.PAT }}
           publish_dir: ./memory_agents/docs
+        working-directory: .
